Fixed z-index of navbar

--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ nav {
   width: 100%;
   top: 0;
   left: 0;
+  z-index: 1;
 }
 
 .navbar_container {
